--- a/src/i18n/de/account-menu.json
+++ b/src/i18n/de/account-menu.json
@@ -2,6 +2,6 @@
   "Profile Settings": "Profileinstellungen",
   "Help": "Hilfe",
   "Sign out": "Logout",
-  "Users": "Users",
-  "Site Administration": "Site Administration"
+  "Users": "Benutzer",
+  "Site Administration": "Administration"
 }
