--- a/src/i18n/de/dashboard-projects.json
+++ b/src/i18n/de/dashboard-projects.json
@@ -42,34 +42,30 @@
   "User Profile Message": "Bitte vervollständige Dein Benutzerprofil. Ohne Nickname oder vollständigen Namen erscheinst Du für andere Benutzer anonym.",
   "Complete Profile": "Zum Profil",
   "User Profile": "Unvollständiges Benutzerprofil",
-  "Create Project": "Create Project",
-  "Create": "Create",
-  "Project Name": "Project Name",
-  "Name your project": "Name your project",
-  "Project Description": "Project Description",
-  "Describe your project": "Describe your project",
-  "Open Join": "Open Join",
-  "Open Edit": "Open Edit",
-  "open-join-info": "With 'Open Join' switched on, any registered user can join your project without an invitation.",
-  "open-edit-info": "With 'Open Edit' switched on, any member of your project can edit the default assignment.",
-  "Join": "Join",
-  "Join Project": "Join Project",
-  "Join Project Message": "This project allows all users to become members. Would you like to join?",
-  "assignments": "assignments",
-  "assignment": "assignment",
-  "Public Projects": "Public Projects",
-  "Assignments": "Assignments",
-  "Texts": "Texts",
-  "Images": "Images",
+  "Create Project": "Neues Projekt Erstellen",
+  "Create": "Erstellen",
+  "Project Name": "Projektname",
+  "Name your project": "Projektname",
+  "Project Description": "Projektbeschreibung",
+  "Describe your project": "Projektbeschreibung",
+  "Join": "Beitreten",
+  "Join Project": "Projekt Beitreten",
+  "Join Project Message": "Diese Projekt ist für alle Benutzer öffentlich zugänglich. Möchtest Du beitreten?",
+  "assignments": "Arbeitsaufträge",
+  "assignment": "Arbeitsauftrag",
+  "Public Projects": "Öffentliche Projekte",
+  "Assignments": "Arbeitsaufträge",
+  "Texts": "Texte",
+  "Images": "Bilder",
   "Team": "Team",
-  "Owner": "Owner",
-  "Project Visibility": "Project Visibility",
-  "Public": "Public",
-  "Private": "Private",
-  "Project admins choose the users that can join this project": "Project admins choose the users that can join this project",
-  "Any registered user can join this project without an invitation": "Any registered user can join this project without an invitation",
-  "Project Type": "Project Type",
-  "Single Team": "Single Team",
-  "Project admins create assignments with specific documents and team members": "Project admins create assignments with specific documents and team members",
-  "Project members can annotate any document": "Project members can annotate any document"
+  "Owner": "Besitzer",
+  "Project Visibility": "Sichtbarkeit",
+  "Public": "Öffentlich",
+  "Private": "Privat",
+  "Project admins choose the users that can join this project": "Andere Benutzer haben nur dann Zugriff, wenn Sie von einem Projektadministrator eingeladen werden.",
+  "Any registered user can join this project without an invitation": "Jeder Benutzer kann diesem Projekt ohne Einladung selbständig beitreten.",
+  "Project Type": "Projekttyp",
+  "Single Team": "Einzelteam",
+  "Project admins create assignments with specific documents and team members": "Projektadministratoren erstellen Arbeitsaufträge und weisen sie bestimmten Projektmitgliedern zu.",
+  "Project members can annotate any document": "Projektmitglieder können alle Dokumente uneingeschränkt annotieren."
 }
