--- a/src/i18n/de/project-assignments.json
+++ b/src/i18n/de/project-assignments.json
@@ -1,9 +1,10 @@
 {
+  "New Assignment": "Neuer Arbeitsauftrag",
   "Unnamed Assignment": "Unbenannter Arbeitsauftrag",
   "Create a new Assignment": "Neuen Arbeitsauftrag erstellen",
-  "1. General": "1. General",
+  "1. General": "1. Allgemein",
   "2. Documents": "2. Dokumente",
-  "3. Layers": "3. Layers",
+  "3. Layers": "3. Ebenen",
   "4. Team": "4. Team",
   "5. Verify": "5. Kontrolle",
   "Cancel": "Abbrechen",
@@ -19,7 +20,7 @@
   "Selected ${n} documents": "${n} Dokumente ausgewählt",
   "Add people to the assignment.": "Weise diesem Arbeitsauftrag ein Projektteam zu.",
   "Name": "Name",
-  "Instructions": "Instructions",
+  "Instructions": "Beschreibung",
   "Member since": "Mitglied seit",
   "You": "Du",
   "Anonymous team member": "Anonymes Teammitglied",
@@ -27,7 +28,7 @@
   "Select at least 1 team member": "Wähle mindestens 1 Teammitglied",
   "Selected 1 team member": "1 Teammitglied ausgewählt",
   "Selected ${n} team members": "${n} Teammitglieder ausgewählt",
-  "Add a name and instructions for this assignment.": "Add a name and instructions for this assignment.",
+  "Add a name and instructions for this assignment.": "Bitte gib einen Namen und eine Beschreibung für diesen Arbeitsauftrag ein.",
   "Almost Ready!": "Fast geschafft!",
   "Verify and confirm this assignment.": "Kontrolliere und bestätige den Arbeitsauftrag.",
   "Name:": "Name:",
@@ -51,11 +52,11 @@
   "Could not delete the assignment.": "Der Arbeitsauftrag konnte nicht gelöscht werden.",
   "Could not open the assignment.": "Der Arbeitsauftrag konnte nicht geöffnet werden.",
   "Edit": "Edit",
-  "Project Base Assignment": "Project Base Assignment",
-  "base_assignment_description": "This assignment is created by default for this project. You can edit this description to describe the intent of the project and any additional instructions.",
-  "Import read only layers from other assignments to add to each document.": "Import read only layers from other assignments to add to each document.",
+  "Project Base Assignment": "Basis-Arbeitsauftrag",
+  "base_assignment_description": "Dieser Basis-Arbeitsauftrag wurde automatisch erstellt. Du kannst seine Beschreibung ändern um Mitgliedern zusätzliche Informationen zu diesem Projekt zu geben.",
+  "Import read only layers from other assignments to add to each document.": "Importiere Ebenen aus anderen Arbeitsaufträgen um sie schreibgeschützt in diesem Arbeitsauftrag anzuzeigen.",
   "Optional": "Optional",
-  "Select All": "Select All",
-  "Base Assignment": "Base Assignment",
-  "You have not added any team members.": "You have not added any team members."
+  "Select All": "Alles auswählen",
+  "Base Assignment": "Basis-Arbeitsauftrag",
+  "You have not added any team members.": "Du hast noch keine Teammitglieder eingeladen."
 }
