--- a/src/i18n/de/project-collaboration.json
+++ b/src/i18n/de/project-collaboration.json
@@ -34,5 +34,5 @@
   "Could not delete user.": "Benutzer konnte nicht entfernt werden.",
   "Could not send invitation.": "Einladung konnte nicht abgeschickt werden.",
   "Team": "Team",
-  "Projects": "Projects"
+  "Projects": "Projekte"
 }
