--- a/src/i18n/de/project-settings.json
+++ b/src/i18n/de/project-settings.json
@@ -8,11 +8,5 @@
   "Error loading tag vocabulary.": "Fehler beim Laden des Tag-Vokabulars.",
   "Error saving tag vocabulary.": "Fehler beim Speichern des Tag-Vokabulars.",
   "Something went wrong": "Etwas ist schiefgelaufen",
-  "Name and Access Settings": "Name and Access Settings",
-  "Open Join": "Open Join",
-  "Open Edit": "Open Edit",
-  "open-join-info": "With 'Open Join' switched on, any registered user can join your project without an invitation.",
-  "open-edit-info": "With 'Open Edit' switched on, any member of your project can edit the default assignment",
-  "Project Name": "Project Name",
-  "Project Description": "Project Description"
+  "Name and Access Settings": "Name and Access Settings"
 }
