--- a/src/i18n/en/project-assignments.json
+++ b/src/i18n/en/project-assignments.json
@@ -1,4 +1,5 @@
 {
+  "New Assignment": "New Assignment",
   "Unnamed Assignment": "Unnamed Assignment",
   "Create a new Assignment": "Create a new Assignment",
   "1. General": "1. General",
