Fix for avatar overflow

--- a/src/i18n/en/dashboard-projects.json
+++ b/src/i18n/en/dashboard-projects.json
@@ -74,5 +74,6 @@
   "Project Type": "Project Type",
   "Single Team": "Single Team",
   "Project admins create assignments with specific documents and team members": "Project admins create assignments with specific documents and team members",
-  "Project members can annotate any document": "Project members can annotate any document"
+  "Project members can annotate any document": "Project members can annotate any document",
+  "More": "More"
 }
