--- a/src/i18n/de/dashboard-projects.json
+++ b/src/i18n/de/dashboard-projects.json
@@ -67,5 +67,6 @@
   "Project Type": "Projekttyp",
   "Single Team": "Einzelteam",
   "Project admins create assignments with specific documents and team members": "Projektadministratoren erstellen Arbeitsaufträge und weisen sie bestimmten Projektmitgliedern zu.",
-  "Project members can annotate any document": "Projektmitglieder können alle Dokumente uneingeschränkt annotieren."
+  "Project members can annotate any document": "Projektmitglieder können alle Dokumente uneingeschränkt annotieren.",
+  "More": "More"
 }
