Added German translation

--- a/src/i18n/en/project-home.json
+++ b/src/i18n/en/project-home.json
@@ -50,7 +50,7 @@
   "Could not rename the document.": "Could not rename the document.",
   "Could not delete the document.": "Could not delete the document.",
   "Document Library": "Document Library",
-  "Select a document or upload a new one.": "Select a document or upload a new one. Be sure to follow your country’s copyright restrictions.",
+  "Select a document or upload a new one.": "Select a document or upload a new one. Be sure to follow your country's copyright restrictions.",
   "Add Document": "Add Document",
   "My Documents": "My Documents",
   "All Documents": "All Documents",
