--- a/src/i18n/de/dashboard-account.json
+++ b/src/i18n/de/dashboard-account.json
@@ -5,8 +5,8 @@
   "We found a Gravatar for your address.": "Wir haben einen Gravatar für Deine Addresse gefunden.",
   "Use as my Avatar.": "Verwenden.",
   "Public Information": "Öffentliche Information",
-  "Other users can see this information about you. All fields are optional.": "You must fill out either a Display Name or a First Name and Last Name. The name you enter will be displayed on your annotations. If you enter both a Display Name and your First and Last Names, only your Display name will be shown to other users.",
-  "Nickname": "Nickname",
+  "Other users can see this information about you. All fields are optional.": "Gib entweder einen Anzeigenamen oder einen Vor- und Nachnamen ein. Der eingegebene Name wird in den Annotationen angezeigt. Wenn Du sowohl einen Anzeigenamen als auch einen Vor- und Nachnamen eingibst, wird anderen Benutzern nur der Anzeigename angezeigt.",
+  "Nickname": "Anzeigename",
   "First Name": "Vorname",
   "Last Name": "Nachname",
   "Avatar URL": "Avatar URL",
