--- a/src/i18n/en/project-request.json
+++ b/src/i18n/en/project-request.json
@@ -1,5 +1,11 @@
 {
   "Do you wish to request membership in project": "Do you wish to request membership in project",
   "Request": "Request",
-  "Cancel": "Cancel"
+  "Cancel": "Cancel",
+  "OK": "OK",
+  "Do you wish to request membership for project": "Do you wish to request membership for project",
+  "Request for Membership Sent!": "Request for Membership Sent!",
+  "Request for Membership Failed!": "Request for Membership Failed!",
+  "The admin of the project has been sent your request. Once approved you will be added to the project": "The admin of the project has been sent your request. Once approved you will be added to the project.",
+  "Your request failed to send. Please check that you are not already a member or retry the link": "Your request failed to send. Please check that you are not already a member or retry the link."
 }
