--- a/src/i18n/en/project-collaboration.json
+++ b/src/i18n/en/project-collaboration.json
@@ -35,5 +35,22 @@
   "Could not delete user.": "Could not delete user.",
   "Could not send invitation.": "Could not send invitation.",
   "Team": "Team",
-  "Projects": "Projects"
+  "Projects": "Projects",
+  "Join Requests": "Join Requests",
+  "Accept": "Accept",
+  "Ignore": "Ignore",
+  "Ignored": "Ignored",
+  "Show Ignored": "Show Ignored",
+  "User Added": "User Added",
+  "was successfully added to project.": "was successfully added to project.",
+  "Adding User Failed!": "Adding User Failed!",
+  "was not added to project.": "was not added to project.",
+  "No Open Join Requests": "No Open Join Requests",
+  "Join Link": "Join Link",
+  "Copy Link": "Copy Link",
+  "copy_link_info": "This link can be sent to users to invite them to your project.",
+  "Copied to clipboard": "Copied to clipboard",
+  "You can now distribute this link to invite users.": "You can now distribute this link to invite users.",
+  "Request Ignored": "Request Ignored",
+  "request to join the project has been ignored.": "request to join the project has been ignored."
 }
