--- a/src/i18n/en/project-request.json
+++ b/src/i18n/en/project-request.json
@@ -7,5 +7,7 @@
   "Request for Membership Sent!": "Request for Membership Sent!",
   "Request for Membership Failed!": "Request for Membership Failed!",
   "The admin of the project has been sent your request. Once approved you will be added to the project": "The admin of the project has been sent your request. Once approved you will be added to the project.",
-  "Your request failed to send. Please check that you are not already a member or retry the link": "Your request failed to send. Please check that you are not already a member or retry the link."
+  "Your request failed to send. Perhaps you have already requested membership?": "Your request failed to send. Perhaps you have already requested membership?",
+  "You are already a member of this project. You can navigate to it from the Projects screen > My Projects": "You are already a member of this project. You can navigate to it from the Projects screen > My Projects",
+  "Go To Project": "Go To Project"
 }
