--- a/src/i18n/de/project-collaboration.json
+++ b/src/i18n/de/project-collaboration.json
@@ -35,21 +35,21 @@
   "Could not send invitation.": "Einladung konnte nicht abgeschickt werden.",
   "Team": "Team",
   "Projects": "Projekte",
-  "Join Requests": "Join Requests",
-  "Accept": "Accept",
-  "Ignore": "Ignore",
-  "Ignored": "Ignored",
-  "Show Ignored": "Show Ignored",
-  "User Added": "User Added",
-  "was successfully added to project.": "was successfully added to project.",
-  "Adding User Failed!": "Adding User Failed!",
-  "was not added to project.": "was not added to project.",
-  "No Open Join Requests": "No Open Join Requests",
-  "Join Link": "Join Link",
-  "Copy Link": "Copy Link",
-  "copy_link_info": "This link can be sent to users to invite them to your project.",
-  "Copied to clipboard": "Copied to clipboard",
-  "You can now distribute this link to invite users.": "You can now distribute this link to invite users.",
-  "Request Ignored": "Request Ignored",
-  "request to join the project has been ignored.": "request to join the project has been ignored."
+  "Join Requests": "Beitrittsanfragen",
+  "Accept": "Akzeptieren",
+  "Ignore": "Ignorieren",
+  "Ignored": "Ignoriert",
+  "Show Ignored": "Ignorierte anzeigen",
+  "User Added": "Benutzer hinzugefügt",
+  "was successfully added to project.": "wurde erfolgreich zum Projekt hinzugefügt.",
+  "Adding User Failed!": "Etwas ist schiefgelaufen",
+  "was not added to project.": "konnte dem Projekt nicht hinzugefügt werden.",
+  "No Open Join Requests": "Keine offenen Beitrittsanfragen",
+  "Join Link": "Beitrittslink",
+  "Copy Link": "Link kopieren",
+  "copy_link_info": "Mit diesem Link kannst Du Benutzer in das Projekt einladen.",
+  "Copied to clipboard": "In die Zwischenablage kopiert",
+  "You can now distribute this link to invite users.": "Du kannst nun mit diesem Link Benutzer in das Projekt einladen.",
+  "Request Ignored": "Beitrittsanfrage Ignoriert",
+  "request to join the project has been ignored.": "Die Beitrittsanfrage wurde ignoriert."
 }
