--- a/src/i18n/de/project-collaboration.json
+++ b/src/i18n/de/project-collaboration.json
@@ -51,5 +51,7 @@
   "Copied to clipboard": "In die Zwischenablage kopiert",
   "You can now distribute this link to invite users.": "Du kannst nun mit diesem Link Benutzer in das Projekt einladen.",
   "Request Ignored": "Beitrittsanfrage Ignoriert",
-  "request to join the project has been ignored.": "Die Beitrittsanfrage wurde ignoriert."
+  "request to join the project has been ignored.": "Die Beitrittsanfrage wurde ignoriert.",
+  "Invite Users to the Project": "Invite Users to the Project",
+  "Add list of users": "Add list of users"
 }
