--- a/src/i18n/en/project-collaboration.json
+++ b/src/i18n/en/project-collaboration.json
@@ -36,6 +36,10 @@
   "Could not send invitation.": "Could not send invitation.",
   "Team": "Team",
   "Projects": "Projects",
+  "Invite Users to the Project": "Invite Users to the Project",
+  "Add list of users": "Add list of users",
+  "invite-list-instructions": "Drop a CSV file here or click to select a file from your computer.",
+  "invite-list-instructions-2": "The file should contain two columns, with the first column containing the email address and the second column containing either 'Student' or 'Admin'",
   "Join Requests": "Join Requests",
   "Accept": "Accept",
   "Ignore": "Ignore",
