--- a/src/i18n/en/dashboard-account.json
+++ b/src/i18n/en/dashboard-account.json
@@ -12,5 +12,7 @@
   "Avatar URL": "Avatar URL",
   "Profile updated": "Profile updated",
   "Something went wrong": "Something went wrong",
-  "Could not update your profile information.": "Could not update your profile information."
+  "Could not update your profile information.": "Could not update your profile information.",
+  "Save": "Save",
+  "Cancel": "Cancel"
 }
