Added error boundary component to annotation pages

--- a/src/i18n/de/annotation-common.json
+++ b/src/i18n/de/annotation-common.json
@@ -28,6 +28,7 @@
   "Edit reply": "Antwort bearbeiten",
   "Enter link": "Link einfügen",
   "Error": "Fehler",
+  "Something went wrong loading this document.": "Etwas is schiefgelaufen. Dokument konnte nicht geladen werden.",
   "Filters": "Filter",
   "First Tag": "Erstes Tag",
   "Hide Annotations": "Alle Ausblenden",
