--- a/src/i18n/en/annotation-common.json
+++ b/src/i18n/en/annotation-common.json
@@ -22,6 +22,7 @@
   "Paste a YouTube URL to embed the video into your annotation.": "Paste a YouTube URL to embed the video into your annotation.",
   "YouTube URL": "YouTube URL",
   "Error": "Error",
+  "Something went wrong loading this document.": "Something went wrong loading this document.",
   "Show annotation list": "Show annotation list",
   "Show annotation filter and color configuration": "Show annotation filter and color configuration",
   "Anonymous": "Anonymous",
