Fix labels and descriptions

--- a/src/i18n/en/project-assignments.json
+++ b/src/i18n/en/project-assignments.json
@@ -52,8 +52,8 @@
   "Could not delete the assignment.": "Could not delete the assignment.",
   "Could not open the assignment.": "Could not open the assignment.",
   "Edit": "Edit",
-  "Project Base Assignment": "Project Base Assignment",
-  "base_assignment_description": "This assignment is created by default for this project. You can edit this description to describe the intent of the project and any additional instructions.",
+  "Project Baselayer": "Project Baselayer",
+  "base_assignment_description": "The project baselayer contains all of the documents you have added to this project. If you annotate a baselayer document, you create a set of 'baselayer' annotations on that document. When you add one of these annotated documents to an assignment, you can include baselayer annotations as a set of read-only annotations.",
   "Delete": "Delete",
   "Are you sure you want to delete this assignment?": "Are you sure you want to delete this assignment?",
   "Deleting this assignment will remove it from all users and will no longer be visible here.": "Deleting this assignment will remove it from all users and will no longer be visible here.",
