--- a/src/i18n/de/project-assignments.json
+++ b/src/i18n/de/project-assignments.json
@@ -52,8 +52,8 @@
   "Could not delete the assignment.": "Der Arbeitsauftrag konnte nicht gelöscht werden.",
   "Could not open the assignment.": "Der Arbeitsauftrag konnte nicht geöffnet werden.",
   "Edit": "Edit",
-  "Project Base Assignment": "Basis-Arbeitsauftrag",
-  "base_assignment_description": "Dieser Basis-Arbeitsauftrag wurde automatisch erstellt. Du kannst seine Beschreibung ändern um Mitgliedern zusätzliche Informationen zu diesem Projekt zu geben.",
+  "Project Baselayer": "Project Baselayer",
+  "base_assignment_description": "The project baselayer contains all of the documents you have added to this project. If you annotate a baselayer document, you create a set of 'baselayer' annotations on that document. When you add one of these annotated documents to an assignment, you can include baselayer annotations as a set of read-only annotations.",
   "Import read only layers from other assignments to add to each document.": "Importiere Ebenen aus anderen Arbeitsaufträgen um sie schreibgeschützt in diesem Arbeitsauftrag anzuzeigen.",
   "Optional": "Optional",
   "Select All": "Alles auswählen",
