--- a/src/i18n/en/dashboard-projects.json
+++ b/src/i18n/en/dashboard-projects.json
@@ -75,5 +75,7 @@
   "Single Team": "Single Team",
   "Project admins create assignments with specific documents and team members": "Project admins create assignments with specific documents and team members",
   "Project members can annotate any document": "Project members can annotate any document",
-  "More": "More"
+  "More": "More",
+  "Accept invitation to": "Accept invitation to",
+  "You have been invited to this project by": "You have been invited to this project by"
 }
