--- a/src/i18n/de/project-home.json
+++ b/src/i18n/de/project-home.json
@@ -20,7 +20,7 @@
   "Deleted": "Entfernt",
   "Document deleted successfully.": "Das Dokument wurde erfolgreich aus dem Projekt entfernt.",
   "Are you sure?": "Bist Du sicher?",
-  "Are you sure you want to delete this document?": "Bist Du sicher dass Du dieses Dokument aus dem Projekt entfernen willst?",
+  "Are you sure you want to delete this document?": "Are you sure you want to remove the document from this project? Only documents that are not used by active projects can be deleted.",
   "Edit Document Metadata": "Dokumentmetadaten",
   "Title": "Titel",
   "Author": "Autor",
