--- a/src/i18n/de/project-collaboration.json
+++ b/src/i18n/de/project-collaboration.json
@@ -52,10 +52,12 @@
   "You can now distribute this link to invite users.": "Du kannst nun mit diesem Link Benutzer in das Projekt einladen.",
   "Request Ignored": "Beitrittsanfrage Ignoriert",
   "request to join the project has been ignored.": "Die Beitrittsanfrage wurde ignoriert.",
-  "Invite Users to the Project": "Invite Users to the Project",
-  "Add list of users": "Add list of users",
-  "Invitation List": "Invitation List",
-  "Send Invitations": "Send Invitations",
-  "Invitations Sent": "Invitations Sent",
-  "Invitations were sent to your list of users.": "Invitations were sent to your list of users."
+  "Invite Users to the Project": "Benutzer Einladen",
+  "Add list of users": "Benutzerliste Importieren",
+  "invite-list-instructions": "Ziehe eine CSV-Datei hierher oder klicke um eine Datei von deinem Computer auszuwählen.",
+  "invite-list-instructions-2": "Die Datei muss zwei Spalten haben: die erste mit E-Mail-Addressen, und die zweite mit der Rolle 'Student' oder 'Admin'",
+  "Invitation List": "Benutzerliste",
+  "Send Invitations": "Einladungen Senden",
+  "Invitations Sent": "Einladungen Gesendet",
+  "Invitations were sent to your list of users.": "Die Einladungen wurden an die Benutzer versandt."
 }
