--- a/src/i18n/de/dashboard-projects.json
+++ b/src/i18n/de/dashboard-projects.json
@@ -68,7 +68,6 @@
   "Single Team": "Einzelteam",
   "Project admins create assignments with specific documents and team members": "Projektadministratoren erstellen Arbeitsaufträge und weisen sie bestimmten Projektmitgliedern zu.",
   "Project members can annotate any document": "Projektmitglieder können alle Dokumente uneingeschränkt annotieren.",
-  "More": "mehr",
-  "Accept invitation to": "Accept invitation to",
-  "You have been invited to this project by": "You have been invited to this project by"
+  "Accept invitation to": "Einladung akzeptieren",
+  "You have been invited to this project by": "Du wurdest eingeladen von"
 }
