--- a/src/i18n/en/project-home.json
+++ b/src/i18n/en/project-home.json
@@ -20,7 +20,7 @@
   "Deleted": "Removed",
   "Document deleted successfully.": "Document removed successfully.",
   "Are you sure?": "Are you sure?",
-  "Are you sure you want to delete this document?": "Are you sure you want to remove the document from this project? Only documents that are not used by active projects can be deleted.",
+  "Are you sure you want to delete this document?": "Are you sure you want to remove the document from this project?",
   "Edit Document Metadata": "Edit Document Metadata",
   "Title": "Title",
   "Author": "Author",
@@ -70,5 +70,6 @@
   "Select Revision": "Select Revision",
   "Latest Revision": "Latest Revision",
   "Show More": "Show More",
-  "Show Less": "Show Less"
+  "Show Less": "Show Less",
+  "Are you sure you want to remove the document from the document library? Only documents that are not used by active projects can be removed.": "Are you sure you want to remove the document from the document library? Only documents that are not used by active projects can be removed."
 }
