--- a/src/i18n/de/email.json
+++ b/src/i18n/de/email.json
@@ -1,5 +1,5 @@
 {
-  "Hello Recogito Studio User": "Hello Recogito Studio User",
-  "_welcome_message_": "${sender} has invited you to join the ${project_name} project on ${host}. Use the button to accept the invitation, or accept the invitation from the Notifications menu next time you log in.",
-  "_you_have_been_invited_": "You have been invited to a project"
+  "Hello Recogito Studio User": "Hallo Recogito Studio Benutzer",
+  "_welcome_message_": "${sender} hat Dich in das Projekt ${project_name} auf ${host} eingeladen. Du kannst diese Einladung mit Klick auf den Button akzeptieren, oder über das Menü \"Benachrichtigungen\" in deinem Recogito Dashboard.",
+  "_you_have_been_invited_": "Du wurdest in ein Projekt eingeladen"
 }
