RS #306 - Renaming "Email" input to "Username"

--- a/src/i18n/en/auth-login.json
+++ b/src/i18n/en/auth-login.json
@@ -2,7 +2,7 @@
   "Welcome Back": "Welcome Back",
   "Login method": "Login method",
   "Log into your account": "Log into your account",
-  "Email": "Email",
+  "Username": "Username",
   "Password": "Password",
   "Please enter a valid email address": "Please enter a valid email address",
   "Invalid email or password": "Invalid email or password",
