--- a/src/i18n/de/auth-login.json
+++ b/src/i18n/de/auth-login.json
@@ -2,7 +2,7 @@
   "Welcome Back": "Willkommen Zurück",
   "Login method": "Login-Methode",
   "Log into your account": "Account Login",
-  "Email": "Email",
+  "Username": "Username",
   "Password": "Passwort",
   "Please enter a valid email address": "Ungültige Emailadresse",
   "Invalid email or password": "Email oder Passwort ungültig",
