Document card: export PDF menu option

--- a/src/i18n/de/project-home.json
+++ b/src/i18n/de/project-home.json
@@ -12,6 +12,7 @@
   "Open document": "Dokument öffnen",
   "Open document in new tab": "In neuem Tab öffnen",
   "Export TEI file": "TEI/XML exportieren",
+  "Export PDF file": "PDF exportieren",
   "Public annotations only": "Nur öffentliche Annotationen",
   "Include my private annotations": "Inkl. meiner privaten Annotationen",
   "Export annotations as CSV": "Annotationen als CSV exportieren",
