--- a/src/i18n/en/project-home.json
+++ b/src/i18n/en/project-home.json
@@ -12,6 +12,7 @@
   "Open document": "Open document",
   "Open document in new tab": "Open document in new tab",
   "Export TEI file": "Export TEI file",
+  "Export PDF file": "Export PDF file",
   "Public annotations only": "Export public annotations only",
   "Include my private annotations": "Include my private annotations",
   "Export annotations as CSV": "Export annotations as CSV",
