'Copy link' annotation menu option

--- a/src/i18n/de/annotation-common.json
+++ b/src/i18n/de/annotation-common.json
@@ -16,6 +16,7 @@
   "Color by": "Farbschema",
   "Colors": "Farben",
   "Connection Lost.": "Verbindung unterbrochen.",
+  "Copy link to annotation": "Link zur Annotation kopieren",
   "Create new private note": "Neue private Notiz",
   "Create new public note": "Neue öffentliche Notiz",
   "Creator": "Autor",
