--- a/src/i18n/en/annotation-common.json
+++ b/src/i18n/en/annotation-common.json
@@ -93,5 +93,6 @@
   "Zoom out": "Zoom out",
   "Add an annotation...": "Add an annotation...",
   "Connection Lost.": "Connection Lost.",
-  "Try refreshing the page.": "Try refreshing the page."
+  "Try refreshing the page.": "Try refreshing the page.",
+  "Copy link to annotation": "Copy link to annotation"
 }
