--- a/src/i18n/de/dashboard-projects.json
+++ b/src/i18n/de/dashboard-projects.json
@@ -74,5 +74,6 @@
   "all": "All",
   "active": "Active",
   "locked": "Locked",
-  "View": "View"
+  "View": "View",
+  "Unlock Project": "Unlock Project"
 }
