--- a/src/i18n/en/dashboard-projects.json
+++ b/src/i18n/en/dashboard-projects.json
@@ -82,5 +82,6 @@
   "all": "All",
   "active": "Active",
   "locked": "Locked",
-  "View": "View"
+  "View": "View",
+  "Unlock Project": "Unlock Project"
 }
