--- a/src/i18n/de/project-settings.json
+++ b/src/i18n/de/project-settings.json
@@ -8,15 +8,15 @@
   "Error loading tag vocabulary.": "Fehler beim Laden des Tag-Vokabulars.",
   "Error saving tag vocabulary.": "Fehler beim Speichern des Tag-Vokabulars.",
   "Something went wrong": "Etwas ist schiefgelaufen",
-  "Name and Access Settings": "Name and Access Settings",
+  "Name and Access Settings": "Name und Zugriffseinstellungen",
   "Tagging": "Tagging",
-  "Project Status": "Project Status",
-  "status_message": "Projects can be either Active or Locked. Locked projects are read only but still accessible by the project members. Locked Public Projects cannot be joined by new members. Only Organization Admins can Unlock a project once locked.",
-  "Current Status": "Current Status",
-  "Locked": "Locked",
-  "Active": "Active",
-  "Lock Project": "Lock Project",
-  "Unlock Project": "Unlock Project",
-  "lock_warning_message": "Once a project is locked, it will become read-only for all project members, including yourself. The project will still be accessible by all project members, but no new members can be added. Only an Organization Admin can undo this action.",
-  "unlock_message": "When a project is unlocked, there will be no project administrators. Be sure to designate one on the Teams page."
+  "Project Status": "Projektstatus",
+  "status_message": "Projekte können aktiv oder gesperrt sein. Gesperrte Projekte sind schreibgeschützt. Projektmitglieder können sie aber immer noch öffnen. Es können keine neuen Mitglieder mehr eingeladen werden. Gesperrten öffentlichen Projekten können keine neuen Mitglieder mehr beitreten. Nur Dein Organisations-Administrator kann ein gesperrtes Projekt wieder entsperren.",
+  "Current Status": "Status",
+  "Locked": "Gesperrt",
+  "Active": "Aktiv",
+  "Lock Project": "Projekt Sperren",
+  "Unlock Project": "Projekt Entsperren",
+  "lock_warning_message": "Ein gesperrtes Projekt kann nicht mehr annotiert oder verändert werden. Projektmitglieder können das Projekt immer noch öffnen. Aber es können keine neuen Mitglieder eingeladen werden. Nur Dein Organisations-Administrator kann diese Operation rückgangig machen.",
+  "unlock_message": "Achtung: Nach dem Entsperren des Projektes gibt es keine Projekt-Administratoren. Vergiß nicht, zumindest einen Benutzer zum Projekt-Administrator zu befördern."
 }
