--- a/src/i18n/de/project-assignments.json
+++ b/src/i18n/de/project-assignments.json
@@ -18,7 +18,7 @@
   "Select at least 1 document": "Wähle mindestens 1 Dokument",
   "Selected 1 document": "1 Dokument ausgewählt",
   "Selected ${n} documents": "${n} Dokumente ausgewählt",
-  "Add people to the assignment.": "Add people to the assignment. Note that all Project Administrators will have access by default and cannot be removed from an assignment.",
+  "Add people to the assignment.": "Teammitglieder. Achtung: Projekt-Administratoren haben automatisch Zugriff. Sie können nicht aus dem Team entfernt werden.",
   "Name": "Name",
   "Instructions": "Beschreibung",
   "Member since": "Mitglied seit",
@@ -26,8 +26,8 @@
   "Anonymous team member": "Anonymes Teammitglied",
   "This user has not provided a profile name.": "Dieses Teammitglied hat keinen Profilnamen angegeben.",
   "Select at least 1 team member": "Wähle mindestens 1 Teammitglied",
-  "Selected 1 team member": "Selected 1 additional team member",
-  "Selected ${n} team members": "Selected ${n} additional team members",
+  "Selected 1 team member": "1 weiteres Teammitglied ausgewählt",
+  "Selected ${n} team members": "${n} weitere Teammitglieder ausgewählt",
   "Add a name and instructions for this assignment.": "Bitte gib einen Namen und eine Beschreibung für diesen Arbeitsauftrag ein.",
   "Almost Ready!": "Fast geschafft!",
   "Verify and confirm this assignment.": "Kontrolliere und bestätige den Arbeitsauftrag.",
@@ -58,5 +58,5 @@
   "Optional": "Optional",
   "Select All": "Alles auswählen",
   "Base Assignment": "Basis-Arbeitsauftrag",
-  "You have not added any team members.": "You have not added any team members. Only Project Administrators will be able to access this assignment."
+  "You have not added any team members.": "Keine Teammitglieder ausgewählt. Nur Projektadministratoren haben Zugriff auf diesen Arbeitsauftrag."
 }
