--- a/src/i18n/en/project-assignments.json
+++ b/src/i18n/en/project-assignments.json
@@ -61,5 +61,5 @@
   "Optional": "Optional",
   "Select All": "Select All",
   "Base Assignment": "Base Assignment",
-  "You have not added any team members.": "You have not added any team members. Only Project Administrators will be able to access this assignment."
+  "You have not added any team members.": "You have not yet added any team members; you can do that later by editing this assignment. For now, only Project Administrators have access to this assignment."
 }
