Filter by contributor

--- a/src/i18n/de/annotation-common.json
+++ b/src/i18n/de/annotation-common.json
@@ -19,7 +19,7 @@
   "Create new private note": "Neue private Notiz",
   "Create new public note": "Neue öffentliche Notiz",
   "Creator": "Autor",
-  "Creators": "Erstellt von",
+  "Contributors": "Benutzer",
   "Delete annotation": "Annotation löschen",
   "Delete reply": "Antwort löschen",
   "Delete note": "Notiz löschen",
