--- a/src/i18n/en/annotation-common.json
+++ b/src/i18n/en/annotation-common.json
@@ -13,7 +13,7 @@
   "All annotations": "All Annotations",
   "Public annotations only": "Public annotations only",
   "Private annotations only": "Private annotations only",
-  "Creators": "Creators",
+  "Contributors": "Contributors",
   "Tags": "Tags",
   "Image": "Image",
   "Paste a publicly available URL to the image to insert it into your annotation.": "Paste a publicly available URL to the image to insert it into your annotation.",
