Fixes Quill paste-link behavior + adds missing DE label

--- a/src/i18n/de/annotation-common.json
+++ b/src/i18n/de/annotation-common.json
@@ -34,6 +34,7 @@
   "Hide Annotations": "Alle Ausblenden",
   "Image": "Bild",
   "Image URL": "Bild URL",
+  "Link": "Link",
   "Layer": "Annotations-Ebene",
   "Make annotation public": "Diese Annotation öffentlich machen",
   "more reply": "weitere Antwort",
@@ -66,6 +67,7 @@
   "Tag": "Tag",
   "Tags": "Tags",
   "Try refreshing the page.": "Seite neu laden.",
+  "Type or paste a link to insert it into your annotation.": "Füge einen link ein um ihn Deiner Annotation hinzufügen.",
   "URL": "URL",
   "Visibility": "Sichtbarkeit",
   "With Great Power...": "Aus großer Macht...",
