--- a/src/i18n/en/annotation-common.json
+++ b/src/i18n/en/annotation-common.json
@@ -16,6 +16,7 @@
   "Creators": "Creators",
   "Tags": "Tags",
   "Image": "Image",
+  "Type or paste a link to insert it into your annotation.": "Type or paste a link to insert it into your annotation.",
   "Paste a publicly available URL to the image to insert it into your annotation.": "Paste a publicly available URL to the image to insert it into your annotation.",
   "Image URL": "Image URL",
   "YouTube Video": "YouTube Video",
