New password reset flow

--- a/src/i18n/en/auth-reset-password.json
+++ b/src/i18n/en/auth-reset-password.json
@@ -1,5 +1,6 @@
 {
   "Reset Password": "Reset Password",
+  "Your email address": "Your email address",
   "Enter new password": "Enter new password",
   "Confirm password": "Confirm password",
   "Passwords don't match": "Passwords don't match",
