--- a/src/i18n/de/auth-reset-password.json
+++ b/src/i18n/de/auth-reset-password.json
@@ -7,5 +7,6 @@
   "New password should be different from the old password.": "Neues Passwort muss sich vom alten unterscheiden.",
   "Could not reset password": "Passwort konnte nicht zurückgesetzt werden",
   "Password reset.": "Passwort erfolgreich zurückgesetzt.",
-  "Go to dashboard.": "Zum Dashboard."
+  "Go to dashboard.": "Zum Dashboard.",
+  "Your email address": "Email Adresse"
 }
