--- a/src/i18n/en/project-settings.json
+++ b/src/i18n/en/project-settings.json
@@ -25,5 +25,12 @@
   "Lock Project": "Lock Project",
   "Unlock Project": "Unlock Project",
   "lock_warning_message": "Once a project is locked, it will become read-only for all project members, including yourself. The project will still be accessible by all project members, but no new members can be added. Only an Organization Admin can undo this action.",
-  "unlock_message": "When a project is unlocked, there will be no project administrators. Be sure to designate one on the Teams page."
+  "unlock_message": "When a project is unlocked, there will be no project administrators. Be sure to designate one on the Teams page.",
+  "Document View (Right Panel)": "Document View (Right Panel)",
+  "Closed": "Closed",
+  "Annotations": "Annotations",
+  "Notes": "Notes",
+  "Right panel will be closed by default when opening a document": "Right panel will be closed by default when opening a document",
+  "Right panel will display annotations when opening a document": "Right panel will display annotations when opening a document",
+  "Right panel will display notes when opening a document": "Right panel will display notes when opening a document"
 }
