Proper styling for revised tag settings tab

--- a/src/i18n/de/project-settings.json
+++ b/src/i18n/de/project-settings.json
@@ -1,10 +1,12 @@
 {
   "Project Settings": "Projekteinstellungen",
   "Tagging Vocabulary": "Tag-Vokabular",
-  "You can pre-define a tagging vocabulary": "Füge Begriffe in das Textfeld ein, um ein Tag-Vokabular für dieses Projekt festzulegen (ein Begriff pro Zeile).",
-  "The terms will appear as autocomplete options": "In der Annotations-Ansicht werden die Begriffe als Autocomplete-Optionen vorgeschlagen, wenn Benutzer neue Tags anlegen. Beachte dass Benutzer nach wie vor auch eigene Tags verwenden können.",
+  "You can pre-define a tagging vocabulary": "Begriffe aus dem Tag-Vokabular werden Benutzern automatisch als Vorschläge angezeigt, wenn sie neue Tags anlegen. Es können aber nach wie vor auch eigene Tags verwendet werden.",
+  "No tagging vocabulary": "Kein Tag-Vokabular festgelegt",
+  "Add vocabulary terms below": "Add terms to the vocabulary by pasting into the text field (one term per line).",
   "Clear": "Löschen",
   "Save": "Speichern",
+  "Add to Vocabulary": "Add to Vocabulary",
   "Error loading tag vocabulary.": "Fehler beim Laden des Tag-Vokabulars.",
   "Error saving tag vocabulary.": "Fehler beim Speichern des Tag-Vokabulars.",
   "Something went wrong": "Etwas ist schiefgelaufen",
