--- a/src/i18n/en/project-settings.json
+++ b/src/i18n/en/project-settings.json
@@ -1,10 +1,12 @@
 {
   "Project Settings": "Project Settings",
   "Tagging Vocabulary": "Tagging Vocabulary",
-  "You can pre-define a tagging vocabulary": "You can pre-define a tagging vocabulary for this project by copying and pasting terms into the text area below, one term per line.",
-  "The terms will appear as autocomplete options": "The terms will appear as autocomplete options when users create new tags in the annotation interface. Please note that users will still be able to add their own tags, too.",
+  "You can pre-define a tagging vocabulary": "Begriffe aus dem Tag-Vokabular werden Benutzern automatisch als Vorschläge angezeigt, wenn sie neue Tags anlegen. Es können aber nach wie vor auch eigene Tags verwendet werden.",
+  "No tagging vocabulary": "No tagging vocabulary defined",  
+  "Add vocabulary terms below": "Add terms to the vocabulary by pasting into the text field (one term per line).",
   "Clear": "Clear",
   "Save": "Save",
+  "Add to Vocabulary": "Add to Vocabulary",
   "Error loading tag vocabulary.": "Error loading tag vocabulary.",
   "Error saving tag vocabulary.": "Error saving tag vocabulary.",
   "Name and Access Settings": "Name and Access Settings",
